// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`links.ts: pasting a link while holding shift creates plain (non-inline card) link 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "hello have a link ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "https://www.atlassian.com",
              },
              "type": "link",
            },
          ],
          "text": "https://www.atlassian.com",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`links.ts: pasting multiple links while holding shift creates non inline-card links 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "hello have a link ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "https://www.atlassian.com",
              },
              "type": "link",
            },
          ],
          "text": "https://www.atlassian.com",
          "type": "text",
        },
        Object {
          "text": " ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "http://www.google.com",
              },
              "type": "link",
            },
          ],
          "text": "www.google.com",
          "type": "text",
        },
        Object {
          "text": " ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "http://abc.net.au/news/",
              },
              "type": "link",
            },
          ],
          "text": "abc.net.au/news/",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
